k8s/mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pc-mongo
  labels:
    app: pc-mongo
spec:
  serviceName: "pc-mongo"
  replicas: 1
  selector:
    matchLabels:
      app: pc-mongo
  template:
    metadata:
      labels:
        app: pc-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: pc-mongo
  labels:
    app: pc-mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: pc-mongo
  clusterIP: None
